--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,8 @@ main div ul li img{
 div{
     margin: 20px;
     list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     width: 500px;
 }
 div ul li a{
@@ -204,8 +203,8 @@ div ul li img{
     flex-wrap: wrap;
 }
 .enviar{
-    display: flex;
-    justify-content: end;
+    display: grid;
+
     width: 65px;
 }
 
