--- a/css/style.css
+++ b/css/style.css
@@ -203,8 +203,8 @@ div ul li img{
     flex-wrap: wrap;
 }
 .enviar{
-    display: grid;
-
+    display: flex;
+    justify-content: end;
     width: 65px;
 }
 
