--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
 }
 
 /* Index/Inicio */
-
+@media screen and (min-width:768px) and (max-width:1200px) {
+    
+}
 h1{
     text-align: center;
     font-size: 50px;
