--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,14 @@ div{
         margin: 30px 0px 0px 150px;
     }
 }
+@media screen and (min-width:0px) and (max-width:576px) {
+    .contactoNav{
+        padding: 5px 0px 0px 40px;
+    }
+    .contactoInfo{
+        margin: 30px 0px 0px 120px;
+    }
+}
 div ul li a{
     color: black;
 }
