--- a/css/style.css
+++ b/css/style.css
@@ -13,32 +13,46 @@ h1{
     color: azure;
     background-color: rgb(106, 9, 170);
     margin-bottom: 0px;
-    height: 80px;
 }
 .tituloXerox{
     padding: 13px;
 }
 .tituloXerox:hover{
-    animation: XEROX 180s;
+    animation: XEROX 1s;
 }
 @keyframes XEROX{
     0%{
         border-radius: 40%;
-        background-color: rgb(210, 141, 250);
+
     }
     25%{
         border-radius: 50%;
     }
     40%{
-        background-color: rgb(210, 141, 250);
+        background-color: rgb(156, 58, 212);
     }
-    100%{
+    95%{
         background-color: rgb(210, 141, 250);
     }
 }
 h2{
     margin: 30px 30px 0px 30px;
     font-family: Arial, Helvetica, sans-serif;
+}
+@media screen and (max-width:992px) {
+    h2{
+        padding: 40px 0px 0px 0px;
+    }
+}
+@media screen and (max-width:768px) {
+    h2{
+        padding: 90px 0px 0px 0px;
+    }
+}
+@media screen and (min-width:0px) and (max-width:768px) {
+    h2{
+        padding: 50px 0px 0px 0px;
+    }
 }
 h3{
     margin: 30px 30px 0px 30px;
@@ -57,10 +71,11 @@ header{
     font-weight: 600;
     font-style: normal;
     font-size: 18px;
-    padding: 5px;
+    line-height: 25px;
     text-align: center;
     color: black;
-    background-color: rgb(106, 9, 170);
+    background-color: rgb(106, 9, 170);    
+    padding: 5px;
 }
 body{
     background-color: azure;
@@ -73,15 +88,16 @@ body{
     line-height: 25px;
     color: black;
     background-color: rgb(106, 9, 170);
-
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    margin-bottom: 0px;
+    align-items: center;
 }
 .xeroxLista{
     display: inline-block;
     list-style: none;
-    padding: 15px;
+    padding: 10px;
     color: black;
     text-decoration: none;
     transition-property: all;
@@ -97,7 +113,13 @@ nav{
 nav ul li a{
     text-decoration: none;
     color: azure;
-
+    padding: 5px;
+}
+ul{
+    padding-left: 0;
+}
+.row{
+    justify-content: space-evenly;
 }
 footer{
     font-family: Arial, Helvetica, sans-serif;
@@ -124,6 +146,7 @@ section a{
     font-size: 14px;
     display: grid;
     justify-items: center;
+    text-transform: uppercase;
 }
 section ul li img{
     height: 325px;
