--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,7 @@ div{
 @media screen and (min-width:0px) and (max-width:576px) {
     .contactoNav{
         padding: 5px 0px 0px 40px;
+        margin: 60px 0px 0px 50px;
     }
     .contactoInfo{
         margin: 30px 0px 0px 120px;
