--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ header{
     color: black;
     background-color: rgb(106, 9, 170);    
     padding: 5px;
+    display: grid;
 }
 body{
     background-color: azure;
