--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,14 @@ h1{
     text-align: center;
     font-size: 50px;
     font-weight: 550;
-    padding-top: 20px;
+    padding: 20px 0px 0px 70px;
     font-family: Arial, Helvetica, sans-serif;
     color: azure;
     background-color: rgb(106, 9, 170);
     margin-bottom: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .tituloXerox{
     padding: 13px;
