--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ h1{
     text-align: center;
     font-size: 50px;
     font-weight: 550;
-    padding: 20px 0px 0px 70px;
+    padding: 20px 0px 0px 0px;
     font-family: Arial, Helvetica, sans-serif;
     color: azure;
     background-color: rgb(106, 9, 170);
@@ -46,7 +46,8 @@ h2{
 }
 @media screen and (min-width:0px) and (max-width:768px) {
     h2{
-        padding: 50px 0px 0px 0px;
+        margin-top: 20px;
+        padding: 10px 0px 0px 0px;
     }
 }
 h3{
@@ -78,15 +79,30 @@ header{
 }
 .divInicio{
     display: flex;
+    align-content: center;
+    background-color: rgb(106, 9, 170);
+}
+.navbarLinks{
+    background-color: rgb(106, 9, 170);
+    display: flex;
+    flex-direction: column;
 }
 @media screen and (min-width:768px) {
     .divInicio{
+        display: none;
+    }
+    .navbarLinks{
         display: none;
     }
 }
 @media screen and (max-width:768px) {
     nav.row{
         display: none;
+    }
+    header{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
     }
 }
 body{
@@ -116,11 +132,37 @@ body{
     transition-duration: 95ms;    
     letter-spacing: 1px;    
 }
+.xeroxNav1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 19px;
+    line-height: 25px;
+    background-color: rgb(106, 9, 170);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    margin-bottom: 0px;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.xeroxLista1{
+    display: inline-block;
+    list-style: none;
+    padding: 10px 10px 10px 30px;
+    text-decoration: none;
+    transition-property: all;
+    transition-duration: 95ms;    
+    letter-spacing: 1px;
+}
 .xeroxLista:hover{
     transform: scale(1.5);
 }
+.xeroxLista1:hover{
+    transform: scale(1.4);
+}
 nav{
-    height: 60px;
+    margin-bottom: 10px;
 }
 nav ul li a{
     text-decoration: none;
@@ -204,7 +246,7 @@ main div ul li img{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 550;
 }
-div{
+.contactoDiv{
     margin: 20px 0px 20px 0px;
     display: grid;
     align-items: baseline;
@@ -215,7 +257,7 @@ div{
                         "ul form"
 }
 @media screen and (min-width: 0px) and (max-width:1300px) {
-    div{
+    .contactoDiv{
         grid-template-columns: 40vw;
         grid-template-rows: auto;
         grid-template-areas: "ul"
