--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,6 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 700;
 }
-@media screen and (min-width:0px) and (max-width:992px) {
-    h2{
-        padding: 40px 0px 0px 0px;
-    }
-}
 @media screen and (min-width:0px) and (max-width:768px) {
     h2{
         margin-top: 20px;
@@ -108,6 +103,9 @@ header{
 }
 body{
     background-color: azure;
+}
+.breadcrumb{
+    margin: 20px 0px 0px 20px;
 }
 .xeroxNav{
     font-family: Arial, Helvetica, sans-serif;
@@ -298,5 +296,4 @@ div ul li img{
 }
 .enviar{
     display: flex;
-    width: 700;
 }
