--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,9 @@ header{
         flex-direction: column;
     }
 }
+main{
+    margin-top: 150px;
+}
 body{
     background-color: azure;
 }
@@ -129,6 +132,7 @@ body{
     transition-property: all;
     transition-duration: 95ms;    
     letter-spacing: 1px;    
+    width: 160px;
 }
 .xeroxNav1{
     font-family: Arial, Helvetica, sans-serif;
