--- a/css/style.css
+++ b/css/style.css
@@ -73,33 +73,6 @@ header {
   display: grid;
 }
 
-.divInicio {
-  display: flex;
-  align-content: center;
-  background-color: rgb(106, 9, 170);
-}
-
-.navbarLinks {
-  background-color: rgb(106, 9, 170);
-  display: flex;
-  flex-direction: column;
-}
-
-main {
-  margin-top: 150px;
-}
-main div ul li img {
-  margin: 0px 15px;
-}
-
-body {
-  background-color: azure;
-}
-
-.breadcrumb {
-  margin: 20px 0px 0px 20px;
-}
-
 .xeroxNav {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 600;
@@ -126,6 +99,18 @@ body {
 }
 .xeroxLista:hover {
   transform: scale(1.5);
+}
+
+.divInicio {
+  display: flex;
+  align-content: center;
+  background-color: rgb(106, 9, 170);
+}
+
+.navbarLinks {
+  background-color: rgb(106, 9, 170);
+  display: flex;
+  flex-direction: column;
 }
 
 .xeroxNav1 {
@@ -156,6 +141,26 @@ body {
   transform: scale(1.4);
 }
 
+body {
+  background-color: azure;
+}
+
+.breadcrumb {
+  margin: 20px 0px 0px 20px;
+}
+
+.carousel {
+  width: 500px;
+  display: inline;
+}
+
+main {
+  margin-top: 150px;
+}
+main div ul li img {
+  margin: 0px 15px;
+}
+
 nav {
   margin-bottom: 10px;
 }
@@ -174,6 +179,24 @@ ul {
 
 .row {
   justify-content: space-evenly;
+}
+
+.imagenLista {
+  margin: 30px 30px 30px 30px;
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+  text-align: center;
+  font-size: 14px;
+  display: grid;
+  justify-items: center;
+  text-transform: uppercase;
+  justify-content: center;
+}
+
+.imagenCartas {
+  height: 250px;
+  width: 250px;
 }
 
 footer {
@@ -200,24 +223,6 @@ section ul li img {
 }
 section ul li img:hover {
   transform: scale(1.2);
-}
-
-.imagenLista {
-  margin: 30px 30px 30px 30px;
-  display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: 600;
-  text-align: center;
-  font-size: 14px;
-  display: grid;
-  justify-items: center;
-  text-transform: uppercase;
-  justify-content: center;
-}
-
-.imagenCartas {
-  height: 250px;
-  width: 250px;
 }
 
 .contactoMain {
@@ -276,16 +281,6 @@ div ul li img {
     margin-top: 20px;
     padding: 10px 0px 0px 0px;
   }
-}
-@media screen and (min-width: 768px) {
-  .divInicio {
-    display: none;
-  }
-  .navbarLinks {
-    display: none;
-  }
-}
-@media screen and (max-width: 768px) {
   nav.row {
     display: none;
   }
@@ -293,6 +288,14 @@ div ul li img {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+  }
+}
+@media screen and (min-width: 768px) {
+  .divInicio {
+    display: none;
+  }
+  .navbarLinks {
+    display: none;
   }
 }
 @media screen and (min-width: 0px) and (max-width: 1300px) {
@@ -324,6 +327,9 @@ div ul li img {
   }
   .contactoInfo {
     margin: 30px 0px 0px 95px;
+  }
+  .d-block {
+    height: 650px;
   }
 }
 
