edición de carrusel

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -141,7 +141,7 @@ body {
 	margin: 20px 0px 0px 20px;
 }
 .carousel{
-	display: inline;
+	margin: 0px 100px 0px 100px;
 }
 main {
 	margin-top: 150px;
@@ -288,6 +288,9 @@ div {
 		flex-wrap: wrap;
 		flex-direction: column;
 	}
+	.carousel{
+		margin: 0px 50px 0px 50px;
+	}
 }
 @media screen and (min-width:768px) {
 	.divInicio {
@@ -326,6 +329,9 @@ div {
 	}
 	.contactoInfo {
 		margin: 30px 0px 0px 95px;
+	}
+	.carousel{
+		margin: 0px;
 	}
 }
 
