--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ body {
 }
 
 .carousel {
-  display: inline;
+  margin: 0px 100px 0px 100px;
 }
 
 main {
@@ -288,6 +288,9 @@ div ul li img {
     flex-wrap: wrap;
     flex-direction: column;
   }
+  .carousel {
+    margin: 0px 50px 0px 50px;
+  }
 }
 @media screen and (min-width: 768px) {
   .divInicio {
@@ -326,6 +329,9 @@ div ul li img {
   }
   .contactoInfo {
     margin: 30px 0px 0px 95px;
+  }
+  .carousel {
+    margin: 0px;
   }
 }
 
