--- a/scss/style.scss
+++ b/scss/style.scss
@@ -275,6 +275,23 @@ div {
 .enviar {
 	display: flex;
 }
+.banner{
+	padding: 2rem 0rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    gap: 10px;
+    background-image:linear-gradient(
+        rgba(5, 7, 12, 0.5),
+        rgba(5, 7, 12, 0.5)),
+        url(../img/14caa8274fc227ae72a0ba394462db2f811e61e6.webp);
+    background-position: 50% 50%;
+    background-size: cover;
+    background-attachment: fixed;
+    margin-bottom: 2rem;
+}
 @media screen and (min-width:0px) and (max-width:768px) {
 	h2 {
 		margin-top: 20px;
