--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap");
 @keyframes XEROX {
   0% {
     border-radius: 40%;
@@ -22,7 +23,7 @@ h1 {
   font-size: 50px;
   font-weight: 550;
   padding: 20px 0px 0px 0px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   background-color: rgb(91, 17, 141);
   margin-bottom: 0px;
 }
@@ -39,13 +40,13 @@ h1 a {
 
 h2 {
   margin: 30px 30px 0px 30px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 700;
 }
 
 h3 {
   margin: 30px 30px 0px 30px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 700;
   font-size: 17px;
 }
@@ -61,7 +62,7 @@ a {
 }
 
 header {
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   font-style: normal;
   font-size: 18px;
@@ -74,7 +75,7 @@ header {
 }
 
 .xeroxNav {
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   font-style: normal;
   font-size: 19px;
@@ -114,7 +115,7 @@ header {
 }
 
 .xeroxNav1 {
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   font-style: normal;
   font-size: 19px;
@@ -184,7 +185,7 @@ ul {
 .imagenLista {
   margin: 30px 30px 30px 30px;
   display: inline-block;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 600;
   text-align: center;
   font-size: 14px;
@@ -200,7 +201,7 @@ ul {
 }
 
 footer {
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   margin-top: 110px;
   padding: 30px;
   color: azure;
@@ -232,7 +233,7 @@ section ul li img:hover {
 .contactoNav {
   margin: 30px 0px 0px 150px;
   padding: 20px 20px 20px 0px;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 550;
   grid-area: ul;
 }
@@ -248,7 +249,7 @@ section ul li img:hover {
   margin: 30px 0px 0px 500px;
   border: 0ch;
   display: grid;
-  font-family: "Raleway", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   font-weight: 550;
 }
 
@@ -308,7 +309,7 @@ div ul li img {
 }
 
 p {
-  font-size: 70px;
+  font-size: 50px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: azure;
 }
